# usc-arm-calibration

./: .gitignore  README
SafetyLight_msgs/: CMakeLists.txt  manifest.xml
SafetyLight_msgs/msg/: SetColor.msg  SetGreen.msg  SetRed.msg  SetYellow.msg
arm_behavior_actions/: .gitignore  manifest.xml
arm_behavior_actions/action/: GraspObject.action  HoldKey.action  LocateObjects.action  LookAt.action  LookAtHand.action  ManipulateObject.action  MoveArm.action  MoveJoints.action  PreshapeHand.action  RepositionObject.action  ScanForObject.action  TestCalibration.action
arm_calibrate_extrinsics/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
arm_calibrate_extrinsics/config/: calibrate_extrinsics.yaml  calibrate_extrinsics_3d.yaml  calibrate_using_head_control_only.yaml  calibrate_using_sl.yaml
arm_calibrate_extrinsics/launch/: calibrate_extrinsics.launch  calibrate_extrinsics_3d.launch  calibrate_extrinsics_3d_usc.launch  verify_head_calibration.launch
arm_calibrate_extrinsics/msg/: ARFrame.msg  ARFrame3d.msg
arm_calibrate_extrinsics/scripts/: call_calibrate_extrinsics.py  call_calibrate_extrinsics_3d.py
arm_calibrate_extrinsics/src/: calibrate_extrinsics.cpp  calibrate_extrinsics_3d.cpp  verify_head_calibration.cpp
arm_controller_msgs/: mainpage.dox  manifest.xml
arm_dashboard_client/: CMakeLists.txt  mainpage.dox  manifest.xml
arm_fiducial_cal/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
arm_gp_lib/: .gitignore  CMakeLists.txt  Makefile  manifest.xml
arm_head_control/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml
arm_head_control/action/: LookAt.action
arm_head_control/docs/: info.txt
arm_head_control/flir_cpi/: Readme.txt
arm_head_control/flir_cpi/DOS/: DOS.MAK  DOS.TXT
arm_head_control/flir_cpi/DOS/NetDOS/: NETDOS.MAK  NetDOS.txt
arm_head_control/flir_cpi/WIN16/: WIN16.MAK  WIN16.TXT
arm_head_control/flir_cpi/WIN16/NETwin16/: NETWIN16.MAK  NETwin16.txt
arm_head_control/flir_cpi/WIN32/: WIN32.MAK  WIN32.MDP  WIN32.TXT  WIN32.dsp  WIN32.dsw  WIN32.plg  WIN32.sln  WIN32.vcproj
arm_head_control/flir_cpi/WIN32/CGIwin32/: CGIwin32.dsp  CGIwin32.dsw
arm_head_control/flir_cpi/WIN32/NETwin32/: NETwin32.dsp  NETwin32.dsw  NETwin32.mak  NETwin32.mdp  NETwin32.txt
arm_head_control/flir_cpi/code/: cgi-util.c  cgi.c  dosseria.c  linuxser.c  nettest.c  ptu.c  test.c  w16seria.c  w32seria.c
arm_head_control/flir_cpi/include/: dosseria.h  linuxser.h  opcodes.h  ptu.h  w16seria.h  w32seria.h
arm_head_control/flir_cpi/linux/: .Makefile.swp  Makefile  README.TXT
arm_head_control/include/arm_head_control/: arm_head_c_api.h  arm_head_control.h  arm_head_unit.h  arm_head_unit_params.h  arm_pan_tilt_unit.h  dp_pan_tilt_unit.h  dp_ptu_api_defs.h  linuxser.h
arm_head_control/launch/: arm_head_control.launch
arm_head_control/msg_gen/cpp/include/arm_head_control/: LookAtAction.h  LookAtActionFeedback.h  LookAtActionGoal.h  LookAtActionResult.h  LookAtFeedback.h  LookAtGoal.h  LookAtResult.h
arm_head_control/msg_gen/lisp/: LookAtAction.lisp  LookAtActionFeedback.lisp  LookAtActionGoal.lisp  LookAtActionResult.lisp  LookAtFeedback.lisp  LookAtGoal.lisp  LookAtResult.lisp  _package.lisp  _package_LookAtAction.lisp  _package_LookAtActionFeedback.lisp  _package_LookAtActionGoal.lisp  _package_LookAtActionResult.lisp  _package_LookAtFeedback.lisp  _package_LookAtGoal.lisp  _package_LookAtResult.lisp  arm_head_control-msg.asd
arm_head_control/src/: arm_head_c_api.cpp  arm_head_control.cpp  arm_head_unit.cpp  arm_pan_tilt_unit.cpp  dp_pan_tilt_unit.cpp  linuxser.c
arm_honeybee/: .gitignore  CMakeLists.txt  mainpage.dox  manifest.xml
arm_msgs/: mainpage.dox  manifest.xml
arm_robot_model/: .gitignore  ExtraSensorCalibration.cf  LinkParameters.cf  data.clmc  left_arm_models.txt  mainpage.dox  manifest.xml  right_arm_models.txt
arm_scripts/: mainpage.dox  manifest.xml
ccny_vision/: CPackConfig.cmake  CPackSourceConfig.cmake  rosdep.yaml
ccny_vision/ar_pose/: .gitignore  CMakeLists.txt  manifest.xml
ccny_vision/ar_pose/config/: ar_multi_marker.yaml  ar_multiple_single_marker.yaml  ar_single_marker.yaml  synchronize.yaml
ccny_vision/ar_pose/data/: object_data
ccny_vision/ar_pose/data/wrist/: marker.dat.old  marker_01.pat  marker_01.pat_new  marker_01_16.pat  marker_02.pat  marker_02.pat_new  marker_02_16.pat  marker_03.pat  marker_03.pat_new  marker_03_16.pat  marker_04.pat  marker_04.pat_new  marker_04_16.pat
ccny_vision/ar_pose/include/ar_pose/: ar_base.h  ar_multi.h  ar_multiple_single.h  ar_single.h  ar_synchronize.h
ccny_vision/ar_pose/launch/: ar_pose_left_multi.launch  ar_pose_left_multiple_single.launch  ar_pose_left_single.launch  ar_pose_multi.launch  ar_pose_multiple_single.launch  ar_pose_prosilica_single.launch  ar_pose_right_multi.launch  ar_pose_right_multiple_single.launch  ar_pose_right_single.launch  ar_pose_single.launch  ar_synchronize.launch
ccny_vision/ar_pose/matlab/: gen_mat.m  threshold_pattern.m
ccny_vision/ar_pose/msg/: ARMarker.msg
ccny_vision/ar_pose/msg_gen/cpp/include/ar_pose/: ARMarker.h  ARMarkers.h
ccny_vision/ar_pose/msg_gen/lisp/: ARMarker.lisp  ARMarkers.lisp  _package_ARMarker.lisp
ccny_vision/ar_pose/src/: ar_base.cpp  ar_multi.cpp  ar_multiple_single.cpp  ar_single.cpp  ar_synchronize.cpp  mk_patt.cpp  object.cpp
config/: rosconsole
pier/: CMakeLists.txt  depends.xml  mainpage.dox  manifest.xml
pier/include/pier/: roscpp_py.hpp
pier/nodes/: test_pier
pier/src/: ipy_ros.py  pier_ext.cpp  pier_ros.cpp  pier_ros.py
pier/src/pier/: __init__.py  geom.py  marker_pub.py  markers.py  ros_util.py  rospath.py  shell.py  store.py  threaded.py  trimesh.py  viz_manager.py
usc_fiducial_calibration/: .cproject  .project  .pydevproject  cmake_install.cmake  mainpage.dox  manifest.xml
(+627 files in other folders)
